# ws-dw-do-zero

./: .gitignore  .user.yml  README.md  dbt_project.yml  profiles.yml  pyproject.toml  requirements.txt
models/kpis/: kpi_dividens_amount.sql  kpi_total_commodities.sql  kpis_volume_by_symbol_ticker.sql  schema.yml
models/staging/: schema.yml  stg_commodities.sql
src/: extract_load.py
