[tool.poetry]
name = "ws-dw-do-zero"
version = "0.1.0"
description = ""
authors = ["Marcus Bragion <viniciusbragion@outlook.pt>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "^24.8.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
pandas = "^2.2.2"
sqlalchemy = "^2.0.32"
python-dotenv = "^1.0.1"
yfinance = "^0.2.41"
psycopg2 = "^2.9.9"
taskipy = "^1.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
format = "black . && isort ."
export_requirements = "poetry export --without-hashes --format=requirements.txt > requirements.txt"